# quant-research-micro-lab

./: README.md  pyproject.toml
examples/: benchmark-prices.csv  benchmark-strategy.csv  bootstrap-equity.csv  rolling-equity.csv  synthetic_prices.csv  tail-risk-equity.csv  transaction_cost_demo.py  walk_forward_prices.csv
src/quant_research_micro_lab/: __init__.py  backtest.py  benchmark.py  bootstrap.py  cli.py  risk.py  rolling.py  sweep.py  tail_risk.py  trades.py  walk_forward.py
tests/: test_backtest.py  test_benchmark.py  test_bootstrap.py  test_cli.py  test_risk.py  test_rolling.py  test_sweep.py  test_tail_risk.py  test_trades.py  test_walk_forward.py
